--- a/meetup/src/index.css
+++ b/meetup/src/index.css
@@ -9,13 +9,6 @@ h1, h2 {
   color: #fff;
 }
 
-.card {
-  background-color: #2b2e33;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
-}
-
 .button {
   background-color: #7289da;
   border: none;
@@ -82,4 +75,8 @@ h1, h2 {
   width: 100%;
   height: 100vh;
   opacity: 10%;
+}
+
+.meetup-list-container {
+  overflow-x: auto;
 }
