--- a/meetup/src/components/Meetup.module.css
+++ b/meetup/src/components/Meetup.module.css
@@ -40,9 +40,18 @@
   cursor: pointer;
   font-size: 1.2rem;
   transition: background-color 0.2s ease-out;
-  margin:40px;
+  margin: 40px;
+}
+
+.meetup button.clicked {
+  background-color: #77ad5a;
+}
+
+.meetup button.clicked:hover {
+  background-color: #77ad5a;
 }
 
 .meetup button:hover {
   background-color: #77ad5a;
 }
+
